# event_sourcing

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: EventSourcing.hpp  event.hpp
src/: CMakeLists.txt  EventSourcingImpl.cpp  EventSourcingImpl.hpp  context_data.cpp  context_data.hpp  event_sourcing.cpp  event_sourcing.hpp
test/: CMakeLists.txt  EventSourcingImpl_test.cpp  event_sourcing_impl.hpp  event_sourcing_test.cpp
